--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-name: IGGG Journal 'Lollipop'
+name: IGGG Journal Lollipop
+description: Library of IGGG Journal Lollipop
 markdown: kramdown
 highlighter: :pygments
 permalink: /:year/:month/:title/
@@ -8,3 +9,9 @@ author:
   twitter: IGGGorg
   github: IGGG
   web: www.iggg.org
+
+exclude:
+  - README.md
+  - lollipop-vol*
+
+timezone: Asia/Tokyo
