Fixed highlighter config
pygments はもうサポートされてない

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: IGGG Journal Lollipop
 description: Library of IGGG Journal Lollipop
 markdown: kramdown
-highlighter: :pygments
+highlighter: :rouge
 permalink: /:year/:month/:title/
 url: https://iggg.github.io/lollipop/
 icon: IGGG_l.png
