--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: IGGG Journal Lollipop
 description: Library of IGGG Journal Lollipop
 markdown: kramdown
 permalink: /:year/:month/:title/
-url: https://iggg.github.io/lollipop/
+url: https://iggg.github.io/lollipop
 icon: IGGG_l.png
 author:
   name: IGGG
