Add submodule for vol.7

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lollipop-vol6"]
 	path = lollipop-vol6
 	url = C:\\Users\\noob\\git\\iggg\\lollipop\\lollipop-vol6
+[submodule "lollipop-vol7"]
+	path = lollipop-vol7
+	url = C:\\Users\\noob\\git\\iggg\\lollipop\\lollipop-vol7
