--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lollipop-vol7"]
 	path = lollipop-vol7
 	url = C:\\Users\\noob\\git\\iggg\\lollipop\\lollipop-vol7
+[submodule "lollipop-vol8"]
+	path = lollipop-vol8
+	url = C:\\Users\\noob\\git\\iggg\\lollipop\\lollipop-vol8
